stacks/postgres-stack/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-platform
  labels:
    app.kubernetes.io/part-of: postgres-platform
  annotations:
    argocd.argoproj.io/sync-wave: "0"
