stacks/postgres-stack/k8s/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-tcp
  namespace: postgres-platform
  labels:
    app.kubernetes.io/part-of: postgres-platform
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
      nodePort: 30432
